--- a/languages/esteem.pot
+++ b/languages/esteem.pot
@@ -1,24 +1,17 @@
-# Esteem WordPress Theme. Translation template file.
-# This file is distributed under the same license as the Esteem Theme.
+# Copyright (C) 2016 ThemeGrill
+# This file is distributed under the GNU General Public License v2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Esteem\n"
-"POT-Creation-Date: 2015-02-23 13:32+0545\n"
-"PO-Revision-Date: 2015-02-23 13:32+0545\n"
-"Last-Translator: \n"
-"Language-Team: ThemeGrill <themegrill@gmail.com>\n"
-"Language: en\n"
+"Project-Id-Version: Esteem 1.3.1\n"
+"Report-Msgid-Bugs-To: themegrill@gmail.com\n"
+"POT-Creation-Date: 2016-05-03 08:37:51+00:00\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.7\n"
-"X-Poedit-Basepath: ..\n"
-"X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
-"_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-SearchPath-0: .\n"
+"PO-Revision-Date: 2016-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"X-Generator: grunt-wp-i18n 0.5.4\n"
 
 #: 404.php:20
 msgid "Oops! That page can&rsquo;t be found."
@@ -29,7 +22,6 @@ msgid "It looks like nothing was found at this location. Try the search below."
 msgstr ""
 
 #: comments.php:31
-#, php-format
 msgid "One thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
 msgstr[0] ""
@@ -68,25 +60,24 @@ msgstr ""
 msgid "(None)"
 msgstr ""
 
-#: functions.php:225
+#: functions.php:245
 msgid "You do not have sufficient permissions to access this page."
 msgstr ""
 
-#: functions.php:228
+#: functions.php:248
 msgid "Theme Options"
 msgstr ""
 
-#: functions.php:230
-#, php-format
+#: functions.php:250
 msgid ""
 "<p style=\"font-size: 16px; max-width: 800px\";>As our themes are hosted on "
 "WordPress repository, we need to follow the WordPress theme guidelines and "
 "as per the new guiedlines we have migrated all our Theme Options to "
 "Customizer.</p><p style=\"font-size: 16px; max-width: 800px\";>We too think "
 "this is a better move in the long run. All the options are unchanged, it is "
-"just that they are moved to customizer. So, please use this <a href=\"%1$s"
-"\">link</a> to customize your site. If you have any issues then do let us "
-"know via our <a href=\"%2$s\">Contact form</a></p>"
+"just that they are moved to customizer. So, please use this <a "
+"href=\"%1$s\">link</a> to customize your site. If you have any issues then "
+"do let us know via our <a href=\"%2$s\">Contact form</a></p>"
 msgstr ""
 
 #: inc/admin/meta-boxes.php:21 inc/admin/meta-boxes.php:31
@@ -215,9 +206,9 @@ msgstr ""
 
 #: inc/customizer.php:239
 msgid ""
-"Select default layout. This layout will be reflected in whole site archives, "
-"search etc. The layout for a single post and page can be controlled from "
-"below options.. The change is reflected in whole site."
+"Select default layout. This layout will be reflected in whole site "
+"archives, search etc. The layout for a single post and page can be "
+"controlled from below options.. The change is reflected in whole site."
 msgstr ""
 
 #: inc/customizer.php:252
@@ -236,8 +227,8 @@ msgstr ""
 
 #: inc/customizer.php:291
 msgid ""
-"Select default layout for single posts. This layout will be reflected in all "
-"single posts unless unique layout is set for specific post."
+"Select default layout for single posts. This layout will be reflected in "
+"all single posts unless unique layout is set for specific post."
 msgstr ""
 
 #: inc/customizer.php:304
@@ -268,8 +259,8 @@ msgstr ""
 
 #: inc/customizer.php:340
 msgid ""
-"This will reflect in links, buttons and many others. Choose a color to match "
-"your site."
+"This will reflect in links, buttons and many others. Choose a color to "
+"match your site."
 msgstr ""
 
 #: inc/customizer.php:363
@@ -313,7 +304,6 @@ msgid "Check to activate slider."
 msgstr ""
 
 #: inc/customizer.php:461
-#, php-format
 msgid "Image Upload #%1$s"
 msgstr ""
 
@@ -365,94 +355,81 @@ msgstr ""
 msgid "View PRO version"
 msgstr ""
 
-#: inc/functions.php:257
+#: inc/functions.php:256
 msgid "WordPress"
 msgstr ""
 
-#: inc/functions.php:259
+#. Author of the plugin/theme
 msgid "ThemeGrill"
 msgstr ""
 
-#: inc/functions.php:261
-#, php-format
+#: inc/functions.php:260
 msgid "Copyright &copy; %1$s %2$s."
 msgstr ""
 
-#: inc/functions.php:261
-#, php-format
+#: inc/functions.php:260
 msgid "Powered by %s."
 msgstr ""
 
-#: inc/functions.php:261
-#, php-format
+#: inc/functions.php:260
 msgid "Theme: %1$s by %2$s."
 msgstr ""
 
-#: inc/functions.php:350
-#, php-format
+#: inc/functions.php:349
 msgid ""
-"<span class=\"icon-time\"><a href=\"%1$s\" title=\"%2$s\" rel=\"bookmark\">"
-"%3$s</a></span>"
+"<span class=\"icon-time\"><a href=\"%1$s\" title=\"%2$s\" "
+"rel=\"bookmark\">%3$s</a></span>"
 msgstr ""
 
-#: inc/functions.php:361
+#: inc/functions.php:360
 msgid "No Comments"
 msgstr ""
 
-#: inc/functions.php:361
+#: inc/functions.php:360
 msgid "1 Comment"
 msgstr ""
 
-#: inc/functions.php:361
+#: inc/functions.php:360
 msgid "% Comments"
 msgstr ""
 
-#: inc/functions.php:361
+#: inc/functions.php:360
 msgid "Comments Off"
 msgstr ""
 
-#: inc/functions.php:364
+#: inc/functions.php:363
 msgid "Edit"
 msgstr ""
 
-#: inc/header-functions.php:64
-#, php-format
-msgid "Page %s"
-msgstr ""
-
-#: inc/header-functions.php:159
-#, php-format
+#: inc/header-functions.php:95
 msgid "Author: %s"
 msgstr ""
 
-#: inc/header-functions.php:167
-#, php-format
+#: inc/header-functions.php:103
 msgid "Day: %s"
 msgstr ""
 
-#: inc/header-functions.php:170
-#, php-format
+#: inc/header-functions.php:106
 msgid "Month: %s"
 msgstr ""
 
-#: inc/header-functions.php:173
-#, php-format
+#: inc/header-functions.php:109
 msgid "Year: %s"
 msgstr ""
 
-#: inc/header-functions.php:176 sidebar-left.php:29 sidebar.php:29
+#: inc/header-functions.php:112 sidebar-left.php:29 sidebar.php:29
 msgid "Archives"
 msgstr ""
 
-#: inc/header-functions.php:181
+#: inc/header-functions.php:117
 msgid "Page NOT Found"
 msgstr ""
 
-#: inc/header-functions.php:184
+#: inc/header-functions.php:120
 msgid "Search Results"
 msgstr ""
 
-#: inc/header-functions.php:217
+#: inc/header-functions.php:153
 msgid "You are here:"
 msgstr ""
 
@@ -517,8 +494,7 @@ msgid "Check to display the Featured Image"
 msgstr ""
 
 #: inc/widgets/widgets.php:129
-msgid ""
-"<strong>Note:</strong> Featured Image will overwrite the fontawesome icon."
+msgid "<strong>Note:</strong> Featured Image will overwrite the fontawesome icon."
 msgstr ""
 
 #: inc/widgets/widgets.php:133 inc/widgets/widgets.php:261
@@ -527,8 +503,8 @@ msgstr ""
 
 #: inc/widgets/widgets.php:233
 msgid ""
-"Use this widget to show recent work, portfolio or any pages as your wish "
-"( Business Layout )"
+"Use this widget to show recent work, portfolio or any pages as your wish ( "
+"Business Layout )"
 msgstr ""
 
 #: inc/widgets/widgets.php:235
@@ -615,20 +591,8 @@ msgstr ""
 msgid "Next &rarr;"
 msgstr ""
 
-#: navigation.php:42
-msgctxt "Previous post link"
-msgid "&larr;"
-msgstr ""
-
-#: navigation.php:43
-msgctxt "Next post link"
-msgid "&rarr;"
-msgstr ""
-
 #: no-results.php:16
-#, php-format
-msgid ""
-"Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
+msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
 msgstr ""
 
 #: no-results.php:20
@@ -649,4 +613,46 @@ msgstr ""
 
 #: sidebar-left.php:36 sidebar.php:36
 msgid "Meta"
+msgstr ""
+
+#. Theme Name of the plugin/theme
+msgid "Esteem"
+msgstr ""
+
+#. Theme URI of the plugin/theme
+msgid "http://themegrill.com/themes/esteem/"
+msgstr ""
+
+#. Description of the plugin/theme
+msgid ""
+"Esteem is a clean multipurpose responsive WordPress theme designed to fit "
+"business, portfolio, blogging or any type of site. The theme supports "
+"custom header, custom background, custom widgets, page templates and has "
+"built in options panel to configure primary color, site logo, slider, "
+"sidebar layout and 3 blog layout. It's also fully compatible with popular "
+"plugins like contact Form 7, WP PageNavi and Breadcrumb Navxt and is "
+"translation ready. Get free support at http://themegrill.com/support-forum/ "
+"and check the demo at http://demo.themegrill.com/esteem/."
+msgstr ""
+
+#. Author URI of the plugin/theme
+msgid "http://themegrill.com"
+msgstr ""
+
+#. Template Name of the plugin/theme
+msgid "Business Template"
+msgstr ""
+
+#. Template Name of the plugin/theme
+msgid "Contact Page Template"
+msgstr ""
+
+#: navigation.php:42
+msgctxt "Previous post link"
+msgid "&larr;"
+msgstr ""
+
+#: navigation.php:43
+msgctxt "Next post link"
+msgid "&rarr;"
 msgstr ""
