--- a/languages/esteem.pot
+++ b/languages/esteem.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the GNU General Public License v2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Esteem 1.3.3\n"
+"Project-Id-Version: Esteem 1.3.5\n"
 "Report-Msgid-Bugs-To: themegrill@gmail.com\n"
-"POT-Creation-Date: 2017-01-18 05:50:37+00:00\n"
+"POT-Creation-Date: 2017-05-01 06:47:33+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -918,8 +918,9 @@ msgid ""
 "built in options panel to configure primary color, site logo, slider, "
 "sidebar layout and 3 blog layout. It's also fully compatible with popular "
 "plugins like contact Form 7, WP PageNavi and Breadcrumb Navxt and is "
-"translation ready. Get free support at https://themegrill.com/support-forum/ "
-"and check the demo at https://demo.themegrill.com/esteem/."
+"translation ready. Get free support at "
+"https://themegrill.com/support-forum/ and check the demo at "
+"https://demo.themegrill.com/esteem/."
 msgstr ""
 
 #. Author URI of the plugin/theme
